crates/solidity-v2/testing/snapshots/diagnostics_output/syntax/unexpected_terminal/expecting_identifier/generated/slang/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

Error: Unexpected Equal. One of ConstantKeyword, Identifier, ImmutableKeyword, InternalKeyword, OverrideKeyword, PrivateKeyword, PublicKeyword was expected
   ╭─[input.sol:5:17]
   │
 5 │     uint public = 123;
   │                 ┬  
   │                 ╰── Error occurred here.
───╯
